crates/jolt_java_syntax/tests/snapshots/corpus__style__program__qualified_names.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
package com . example . app;

import z . Z;
import static z . Z . tools.*;
import a . A;

class Names {}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    PackageDeclaration
      AnnotationList
      PackageKw "package" @ 0..7 trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "com" @ 8..11 trailing=[Whitespace " "]
        Dot "." @ 12..13 trailing=[Whitespace " "]
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "example" @ 14..21 trailing=[Whitespace " "]
          Dot "." @ 22..23 trailing=[Whitespace " "]
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "app" @ 24..27
      Semicolon ";" @ 27..28
    ImportDeclaration
      ImportKw "import" @ 30..36 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "z" @ 37..38 trailing=[Whitespace " "]
        Dot "." @ 39..40 trailing=[Whitespace " "]
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "Z" @ 41..42
      Semicolon ";" @ 42..43
    ImportDeclaration
      ImportKw "import" @ 44..50 leading=[Newline "\n"] trailing=[Whitespace " "]
      StaticKw "static" @ 51..57 trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "z" @ 58..59 trailing=[Whitespace " "]
        Dot "." @ 60..61 trailing=[Whitespace " "]
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "Z" @ 62..63 trailing=[Whitespace " "]
          Dot "." @ 64..65 trailing=[Whitespace " "]
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "tools" @ 66..71
      Dot "." @ 71..72
      Star "*" @ 72..73
      Semicolon ";" @ 73..74
    ImportDeclaration
      ImportKw "import" @ 75..81 leading=[Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentNode
          AnnotationList
          Identifier "a" @ 82..83 trailing=[Whitespace " "]
        Dot "." @ 84..85 trailing=[Whitespace " "]
        NameSegmentDotList
          QualifiedNameSegmentNode
            AnnotationList
            Identifier "A" @ 86..87
      Semicolon ";" @ 87..88
    ClassDeclaration
      ClassKw "class" @ 90..95 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Identifier "Names" @ 96..101 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 102..103
        ClassBodyMemberList
        RBrace "}" @ 103..104
  Eof "" @ 105..105 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
