crates/jolt_java_syntax/tests/snapshots/corpus__style__program__top_level_blank_lines.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class First {}


;


class Second {}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "First" @ 6..11 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 12..13
        ClassBodyMemberList
        RBrace "}" @ 13..14
    EmptyDeclaration
      Semicolon ";" @ 17..18 leading=[Newline "\n", Newline "\n", Newline "\n"]
    ClassDeclaration
      ClassKw "class" @ 21..26 leading=[Newline "\n", Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Identifier "Second" @ 27..33 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 34..35
        ClassBodyMemberList
        RBrace "}" @ 35..36
  Eof "" @ 37..37 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
